web-infras/parser/tests/fixtures/esprima/es2018/dynamic-import/invalid-new-import-call/output.txt
[SyntaxError]: Cannot use new with import(...). (1,5)
1|new import(x);
 |   ^
